tests/sksl/errors/Ossfuzz29849.glsl
### Compilation failed:

error: 2: variable 'a' must be created in a scope
1 error
